<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textViewUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/user_email"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:background="@drawable/rounded_text_background"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_user"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:autofillHints="username" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/password"
        android:textColor="@android:color/black"
        android:background="@drawable/rounded_text_background"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_password"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:autofillHints="password" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/log_in"
        android:onClick="catalogue" />

    <Button
        android:id="@+id/log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:onClick="register" />

</LinearLayout>